feature: Update cross project lab code

--- a/CUB-GCP-POC1/CUB-GCP-POC1/appsettings.json
+++ b/CUB-GCP-POC1/CUB-GCP-POC1/appsettings.json
@@ -5,6 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ProjectID": "projecta-400301",
+  "ServiceAccountAuth": "projecta-400301-71950c887569.json"
 }
 
